fix(about): left align

--- a/components/About.module.scss
+++ b/components/About.module.scss
@@ -1,7 +1,6 @@
 @use '../styles/colors';
 
 $width: 25rem;
-$position: 5rem;
 
 .main,
 .backdrop {
@@ -13,7 +12,7 @@ $position: 5rem;
   width: $width;
   height: 100%;
   z-index: 10;
-  left: $position;
+  left: 0;
   top: 0;
   pointer-events: none;
   backdrop-filter: blur(18px);
